# MeowpadConfigurator

./: .gitignore  README.md  components.d.ts  desu-life-page.md  example.cbor  example.json  example1.json  index.html  keys.json  package-lock.json  package.json  pnpm-lock.yaml  shims-tsx.d.ts  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1716357780210-214f65242739f.mjs  vite.config.ts.timestamp-1720961366786-55da3ceed614b.mjs  vite.config.ts.timestamp-1727938287050-db0128f18cfc8.mjs  vite.config.ts.timestamp-1728471378120-1ab307b5ad8a5.mjs  vite.config.ts.timestamp-1728476750992-1479e160a8406.mjs
.github/workflows/: build-artifacts.yml  release.yml
src/: App.vue  api.ts  interface.ts  keycode.ts  keymap.tsx  main.ts  meowpad.json  meowpad3k.json  meowpad4k.json  store.ts  style.scss  utils.ts
src-tauri/: .meowkey  Cargo.toml  tauri.conf.json
src-tauri/hid-iap/: Cargo.toml
src-tauri/hid-iap/src/: error.rs  iap.rs  lib.rs  packet.rs
src-tauri/meowboard/: Cargo.toml
src-tauri/meowboard/src/: cbor.rs  config.rs  keymap.rs  lib.rs  meowboard.rs  meowpad.rs  packet_id.rs
src-tauri/meowpad/: Cargo.toml
src-tauri/meowpad/src/: cbor.rs  config.rs  device.rs  error.rs  kbreport.rs  keycode.rs  lib.rs  meowpad.rs  models.rs  packet.rs  rgb.rs
src-tauri/meowpad3k/: Cargo.toml
src-tauri/meowpad3k/src/: cbor.rs  config.rs  lib.rs  meowpad.rs  packet_id.rs
src-tauri/meowpad4k/: Cargo.toml
src-tauri/meowpad4k/src/: cbor.rs  config.rs  lib.rs  meowpad.rs  packet_id.rs
src-tauri/src/: cmd3k.rs  cmd4k.rs  cmdiap.rs  cmdkbd.rs  cmdpreset.rs  consts.rs  device.rs  device_preset.rs  error.rs  main.rs  utils.rs
src/apis/: api.ts  index.ts
src/apis/meowboard/: api.ts  config.ts
src/apis/meowpad3k/: api.ts  config.ts
src/apis/meowpad4k/: api.ts  config.ts
src/components/: Application.vue  ColorSetting.vue  Debug.vue  DeveloperSettings.vue  DeviceList.vue  DeviceSetting.vue  FirmwareUpdate.vue  Header.vue  IAP.vue  Key.vue  KeyModal.vue  KeyShow.vue  Keyboard.vue  Main.vue
src/components/DeveloperSetting/: Debug.vue  DeveloperSettings.vue  IAP.vue
src/components/KeyComponents/: Key.vue  KeyModal.vue
src/components/Keyboard/: KeyDebug.vue  KeyFrame.vue  KeyHall.vue  KeyModify.vue  KeyModifyOption.vue
src/components/meowboard/: ConfigKb.vue  ConfigKeys.vue  Key.vue  KeyModal.vue  Keyboard.vue  KeyboardMenu.vue  ModifyKeys.vue
src/components/meowboard/Keyboard/: KeyCalibrate.vue  KeyDebug.vue  KeyFrame.vue  KeyHall.vue  KeyModify.vue  KeyModifyOption.vue  KeySelect.vue
src/components/meowpad3k/: ColorSetting.vue  DeviceSetting.vue  Keyboard.vue  Settings.vue
src/components/meowpad4k/: ColorSetting.vue  DeviceSetting.vue  Keyboard.vue  Settings.vue
src/locales/: en.json  en.ts  index.ts  ja.json  jp.json  ko.json  zh-Hant.json  zh.json  zh.ts
src/store/: device.ts  keyboard.ts  main.ts
