[package]
name = "meowpad_configurator"
version = "1.0.1"
description = "A Tauri App"
authors = ["fantasyzhjk", "monodesu"]
license = ""
repository = ""
default-run = "meowpad_configurator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6.1"
tauri = { version = "1.6.1", features = ["api-all"] }
hidapi-rusb = "1.3.3"
pretty-hex = "0.4.1"
once_cell = "1.19.0"
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.3"
toml = "0.8.10"
notify = "4.0.17"
meowpad = { path = "./meowpad" }
hid-iap = { path = "./hid-iap" }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10.3"
thiserror = "1.0.57"
better-panic = "0.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
