[package]
name = "meowpad_configurator"
version = "1.0.2"
description = "A Tauri App"
authors = ["fantasyzhjk", "monodesu"]
license = ""
repository = ""
default-run = "meowpad_configurator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.1"
tauri = { version = "1.7.1", features = ["api-all"] }
hidapi = "2.6.1"
pretty-hex = "0.4.1"
once_cell = "1.19.0"
anyhow = "1.0.86"
log = "0.4.21"
env_logger = "0.11.3"
toml = "0.8.13"
meowpad4k = { path = "./meowpad4k" }
meowpad3k = { path = "./meowpad3k" }
meowpad = { path = "./meowpad" }
meowboard = { path = "./meowboard" }
hid-iap = { path = "./hid-iap" }
reqwest = { version = "0.12.4", features = ["json"] }
regex = "1.10.4"
thiserror = "1.0.61"
better-panic = "0.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
