[package]
name = "meowpad_configurator"
version = "0.2.0"
description = "A Tauri App"
authors = ["fantasyzhjk", "monodesu"]
license = ""
repository = ""
default-run = "meowpad_configurator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9.0"
tauri = { version = "1.8.0", features = ["api-all"] }
hidapi = "2.6.3"
pretty-hex = "0.4.1"
once_cell = "1.19.0"
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
toml = "0.8.19"
meowpad4k = { path = "./meowpad4k" }
meowpad3k = { path = "./meowpad3k" }
meowpad = { path = "./meowpad" }
meowboard = { path = "./meowboard" }
hid-iap = { path = "./hid-iap" }
reqwest = { version = "0.12.7", features = ["json"] }
regex = "1.10.6"
thiserror = "1.0.64"
better-panic = "0.3.0"
cfg-if = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.9.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
