[package]
name = "meowpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
serde_with = "3.6.1"
serde_repr = "0.1.18"
byteorder = "1.5.0"
pretty-hex = "0.4.1"
log = "0.4.21"
hidapi-rusb = "1.3.3"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.18"
palette = { version = "0.7.5", features = ["serializing"] }
ciborium = "0.2.1"
rand = "0.8.5"
thiserror = "1.0.57"