[package]
name = "meowpad"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
serde_repr = "0.1.18"
byteorder = "1.5.0"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.18"
thiserror = "1.0.57"
hidapi = "2.6.1"
ciborium = "0.2.1"