[package]
name = "meowpad"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
serde_repr = "0.1.19"
byteorder = "1.5.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.61"
ciborium = "0.2.2"